--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,5 +1,7 @@
+@import "../../styles/colors";
 .main {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #f3f7fa;
+    background-color: $BackGroundAccent;
 }
