--- a/src/components/Main/Content/Ticket/Ticket.module.scss
+++ b/src/components/Main/Content/Ticket/Ticket.module.scss
@@ -8,6 +8,9 @@
     padding: 20px;
     background-color: white;
     margin-bottom: 20px;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 
 .price {
@@ -28,10 +31,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 8px;
+    margin-bottom: 20px;
 }
 
-.tickeDataContainer {
+.ticketDataContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -65,4 +68,5 @@
     font-size: 14px;
     line-height: 21px;
     color: $GrayDark;
+    font-weight: 500;
 }
